--- a/MascotaFeliz.App.FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/MascotaFeliz.App.FrontEnd/Pages/Shared/_Layout.cshtml
@@ -18,14 +18,18 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Clientes</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Mascotas/List">Mascota Feliz</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Mascotas/List">Mascotas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Veterinarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Visitas</a>
                         </li>
                     </ul>
                 </div>
