--- a/MascotaFeliz.App.FrontEnd/Pages/Mascotas/Edit.cshtml
+++ b/MascotaFeliz.App.FrontEnd/Pages/Mascotas/Edit.cshtml
@@ -50,5 +50,5 @@
         <i  class="fas fa-address-book fa-lg" aria-hidden="true">Visitas</i>
     </a>*@
 </form>
-<a asp-page="./List" class="btn btn-primary"> Regresar a la lista de Mascotas </a>
+<a asp-page="./List" class="btn btn-primary"> Volver a la lista de Mascotas </a>
 
