--- a/MascotaFeliz.App.FrontEnd/Pages/Mascotas/Delete.cshtml
+++ b/MascotaFeliz.App.FrontEnd/Pages/Mascotas/Delete.cshtml
@@ -1,12 +1,12 @@
 @page
-@model MascotaFeliz.App.FrontEnd.Pages.Mascotas.DetailsModel
+@model MascotaFeliz.App.FrontEnd.Pages.Mascotas.DeleteModel
 @{
   int MascotaId=Model.Mascota.Id;
 }
-<h1>Borrar</h1>
+<h3>Borrar</h3>
 
-<h3>Esta SEGURO de querer BORRAR esta MASCOTA?</h3>
-<h2>Datos Detallados de @Model.Mascota.Nombre: </h2>
+<h5>Esta SEGURO de querer BORRAR esta MASCOTA???</h5>
+<h5>Datos Detallados de @Model.Mascota.Nombre: </h5>
 <div>
     IDENTIFICACIÓN: @Model.Mascota.Id
 </div>
@@ -33,8 +33,8 @@
     Veterinario Id: @Model.Mascota.Veterinario.Id Nombre: @Model.Mascota.Veterinario.Nombre @Model.Mascota.Veterinario.Apellidos
 </div>*@
  <form method="post">
-        <input type="hidden" asp-for="Mascota.Id" />
-        <input type="submit" value="Borrar" class="btn btn-danger" /> |
-        <a asp-page="./List"> Retornar a Lista de Mascotas</a>
-    </form>
+     <input type="hidden" asp-for="Mascota.Id" />
+     <input type="submit" value="Borrar" class="btn btn-danger" />
+     <a asp-page="./List" class="btn btn-primary"> Volver a Lista de Mascotas</a>   
+</form>
 </div>
